# birdseye-backend-take-home-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  fly.toml  locustfile.py  pyproject.toml  startlocal.sh
.github/workflows/: deploy.yml  lint_typecheck_test.yml
core/: api.py  config.py  db.py
migrations/: env.py  script.py.mako
migrations/versions/: 2025_07_16_0046-72647c415257_initial.py  2025_07_17_2140-152348f60510_update_url_add_created_at.py  2025_07_18_1904-3d08d0af7d68_add_stats.py  2025_07_20_0347-87d67635e98e_make_datetimes_tz_aware.py
shortlinks/: models.py  routes.py  service.py
src/: api.py  config.py  db.py  models.py  shortlink_service.py
src/tests/: conftest.py  test_api.py
stats/: models.py  routes.py  service.py
tests/: conftest.py
tests/shortlinks/: test_routes.py  test_service.py
tests/stats/: conftest.py  test_routes.py  test_service.py
