[project]
name = "birdseye-backend-take-home-challenge"
version = "0.1.0"
description = "Birdseye backend take home challenge, solution by Ian Robinson"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.9",
    "shortuuid>=1.0.13",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn-worker>=0.3.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.ruff]
select = ["E", "F", "W", "A", "B", "PLC", "PLE", "PLW", "I", "RUF", "TC", "UP"]
